update scraped changed to update

--- a/templates/FindAPet.html
+++ b/templates/FindAPet.html
@@ -197,7 +197,7 @@
 
 
       <button onclick="fetchPets()">Find Pets</button>
-      <button onclick="updateScrape()">Update Scrape</button>
+      <button onclick="updateScrape()">Update</button>
     </div>
 
     <!-- Results Section -->
